--- a/blog1.html
+++ b/blog1.html
@@ -4,19 +4,19 @@
 <head>
 	<meta property="og:title" content="Moon's Pub - Blog" />
 	<meta property="og:description" content="Took us long enough, huh? Yep, we finally made a central website for our patrons on Moon's Pub, an easily navigatable page with plenty of useful junk for you to sift through."/>
-	<meta property="og:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta property="og:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta property="og:url" content="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta property="og:site_name" content="Moon's Pub - Blog"/>
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Moon's Pub - Blog" />
 	<meta name="twitter:description" content="Took us long enough, huh? Yep, we finally made a central website for our patrons on Moon's Pub, an easily navigatable page with plenty of useful junk for you to sift through." />
-	<meta name="twitter:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta name="twitter:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta name="description" content="Took us long enough, huh? Yep, we finally made a central website for our patrons on Moon's Pub, an easily navigatable page with plenty of useful junk for you to sift through." />
 	<link rel="canonical" href="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta charset="UTF-8">
 	<title>Moon's Pub - Blog</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css?version=0.0.4" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<style>
