--- a/potw.html
+++ b/potw.html
@@ -4,19 +4,19 @@
 <head>
 	<meta property="og:title" content="Moon's Pub - Player of the Week" />
 	<meta property="og:description" content="Discover who the player of the week is on Moon's Pub!"/>
-	<meta property="og:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta property="og:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta property="og:url" content="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta property="og:site_name" content="Moon's Pub - Player of the Week"/>
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Moon's Pub - Player of the Week" />
 	<meta name="twitter:description" content="Discover who the player of the week is on Moon's Pub!" />
-	<meta name="twitter:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta name="twitter:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta name="description" content="Discover who the player of the week is on Moon's Pub!" />
 	<link rel="canonical" href="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta charset="UTF-8">
 	<title>Moon's Pub - Player of the Week</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css?version=0.0.4" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
