--- a/servers.html
+++ b/servers.html
@@ -4,21 +4,21 @@
 <head>
 	<meta property="og:title" content="Moon's Pub - Servers" />
 	<meta property="og:description" content="Explore the various servers that Moon's Pub has to offer, from vanilla maps to meme map hell."/>
-	<meta property="og:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta property="og:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta property="og:url" content="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta property="og:site_name" content="Moon's Pub - Servers"/>
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Moon's Pub - Servers" />
 	<meta name="twitter:description" content="Explore the various servers that Moon's Pub has to offer, from vanilla maps to meme map hell" />
-	<meta name="twitter:image" content="https://m0onr1der.github.io/moonspub-tf2c/images/blog1.png" />
+	<meta name="twitter:image" content="https://m0onr1der.github.io/mp-tf2c/images/blog1.png" />
 	<meta name="description" content="Explore the various servers that Moon's Pub has to offer, from vanilla maps to meme map hell" />
 	<link rel="canonical" href="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta charset="UTF-8">
 	<title>Moon's Pub - Servers</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css?version=0.0.4" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 	<div id="background">
