--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<link rel="canonical" href="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta charset="UTF-8">
 	<title>Moon's Pub</title>
-	<link rel="stylesheet" href="css/style.css?version=0.0.4" type="text/css">
+	<link rel="stylesheet" href="css/style.css?version=0.0.5" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 	<div id="background">
@@ -33,7 +33,7 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="https://pastebin.com/raw/0tLNH6gs">MOTD</a>
+							<a href="motd.html">MOTD</a>
 						</li>
 						<li>
 							<a href="servers.html">Servers</a>
