--- a/servers.html
+++ b/servers.html
@@ -16,9 +16,9 @@
 	<link rel="canonical" href="https://m0onr1der.github.io/moonspub-tf2c/" />
 	<meta charset="UTF-8">
 	<title>Moon's Pub - Servers</title>
-	<link rel="stylesheet" href="css/style.css?version=0.0.4" type="text/css">
+	<link rel="stylesheet" href="css/style.css?version=0.0.5" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 	<div id="background">
@@ -33,7 +33,7 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="https://pastebin.com/raw/0tLNH6gs">MOTD</a>
+							<a href="motd.html">MOTD</a>
 						</li>
 						<li class="selected">
 							<a href="servers.html">Servers</a>
@@ -136,7 +136,7 @@
 								</li>
 								<li>
 									<h3><a href="steam://connect/209.243.22.80:33933">/// Moon's Shitpost Sunday | Meme Maps</a></h3>
-									<a href="dives.html"><img src="images/server7.png" alt="Img" class="server_images"></a>
+									<a href="dives.html"><img src="images/server7.png" alt="Img"></a>
 									<p>
 										This is meme map hell. With over 200 Maps to randomly vote for, this is the perfect event to participate in if you want sheer chaos with terrible and funny maps!
 									</p>
