--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</div>
 				<div id="sidebar">
 					<div class="section">
-						<a href="dev.html"><img src="images/pointer1.png" alt="Img" class="sidebar-image"></a>
+						<a href="potw.html"><img src="images/pointer1.png" alt="Img" class="sidebar-image"></a>
 					</div>
 					<div class="section">
 						<a href="https://github.com/M0ONR1DER/fastdl/tree/main"><img src="images/pointer2.png" class="sidebar-image"></a>
