--- a/servers.html
+++ b/servers.html
@@ -66,7 +66,7 @@
 										Map Rotation server, !rtv and !nominate are enabled. 
 									</p>
 									<p>
-										This server has 24 Player Slots.
+										This server has 32 Player Slots.
 									</p>
 								</li>
 								<li>
@@ -76,7 +76,7 @@
 										Ever wanted to have a server with so many maps that it takes forever to nominate one? Ever want to partake in the !rtv lottery with a pool of Great and Shit Maps? If you do, this is the perfect server for you!
 									</p>
 									<p>
-										Map Rotation server, !rtv and !nominate are enabled. 
+										This is a Limited Rotation server, only !rtv is enabled. 
 									</p>
 									<p>
 										This server has 32 Player Slots.
@@ -105,7 +105,7 @@
 										Map Rotation server, !rtv and !nominate are enabled. 
 									</p>
 									<p>
-										This server has 24 Player Slots.
+										This server has 32 Player Slots.
 									</p>
 								</li>
 								<li>
