--- a/motd.html
+++ b/motd.html
@@ -65,7 +65,7 @@
 										<li>No cheating or exploiting, This includes all cheats and all abusive TF2 exploits that give you an advantage.</li>
 										<li>No Racism or Bigotry, even without context. Punishment is dependent on moderator discretion.</li>
 										<li>No political talk, period. Includes Extremism, Hate groups, Hate Speech and Pro/Anti Zionism.</li>
-										<li>Please do not post S*xually Explicit Content, including Topics, Innuendos, etc.</li>
+										<li>Please do not post Sexually explicit content, including topics, innuendos, generally horny content, etc.</li>
 										<li>Do not tell players to leave. This is a public server. Dependent on moderator discretion.</li>
 										<li>No giving birth in VC. Music spamming must be played in Proximity Chat. (<code class="green_text">tf2c_proximity_voice 1</code>)</li>
 										<li>No Chat Spamming. Includes begging for server perks or admin positions.</li>
