--- a/potw.html
+++ b/potw.html
@@ -55,11 +55,14 @@
 					<div>
 						<div class="body">
 							<div>
-								<h1><b>PLAYER OF THE WEEK: PLACEHOLDER</b></h1>
+								<h1><b>PLAYER OF THE WEEK: FOAMS (CIVILIAN RADIO)</b></h1>
 								<img src="images/dev.png" alt="Img" height="256" width="256">
-								<h2><a href="https://steamcommunity.com/id/439jgq2834jn890b2hn90/">STEAM PROFILE</a></h2>
+								<h2><a href="https://steamcommunity.com/id/comfyva/">STEAM PROFILE</a></h2>
 								<p>
-									Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec pulvinar sagittis metus ut tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea dictumst. Nulla at nunc sit amet justo cursus imperdiet. Mauris est leo, placerat nec eleifend eu, facilisis id dolor. Donec nisi nibh, elementum vitae imperdiet non, placerat et felis. Maecenas scelerisque odio quis arcu fringilla malesuada. Nulla facilisi. In libero nulla, fermentum ut pretium ac, pharetra et eros.
+									88.6 CIVILIAN RADIO brings you KICKIN' TUNES on a weekly basis! I have made over 100 bumpers for this bit at this point, and I haven't stopped yet. If you listen carefully, you may find interconnected plots between various bumpers. If you like what I play, be sure to check out my CIVILIAN RADIO BANGERZ playlists on YouTube!
+								</p>
+								<p>
+									Don't ask for a Coconut Crush Fortune. (by the way, you hear my voice whenever a donor joins the server)
 								</p>
 							</div>
 						</div>
