--- a/potw.html
+++ b/potw.html
@@ -56,7 +56,7 @@
 						<div class="body">
 							<div>
 								<h1><b>PLAYER OF THE WEEK: FOAMS (CIVILIAN RADIO)</b></h1>
-								<img src="images/dev.png" alt="Img" height="256" width="256">
+								<img src="https://avatars.fastly.steamstatic.com/faf31a86519097df7ab3a6d5675addd56cf995f7_full.jpg" alt="Img" height="256" width="256">
 								<h2><a href="https://steamcommunity.com/id/comfyva/">STEAM PROFILE</a></h2>
 								<p>
 									88.6 CIVILIAN RADIO brings you KICKIN' TUNES on a weekly basis! I have made over 100 bumpers for this bit at this point, and I haven't stopped yet. If you listen carefully, you may find interconnected plots between various bumpers. If you like what I play, be sure to check out my CIVILIAN RADIO BANGERZ playlists on YouTube!
